# RecurrentNeuralNet

./: .gitignore  README.md  eligibility_ODE.tex  from_learned_assymmetry_to_time_prediction.tex  main.tex  pyproject.toml  standard_continuous_time_dynamics.tex  step_1.tex
scripts/: run_sim.py
src/timedpred/: dynamics.py  simulate.py
tests/: test_simulate.py  test_smoke.py
